GNOME Bugzilla – Bug 692021
show-menubar option is not migrated from GConf
Last modified: 2013-01-18 16:56:07 UTC
In the gconf-based terminal I used to have /apps/gnome-terminal/profiles/Default/default_show_menubar = false The preference doesn't seem to get migrated correctly to GSettings; org.gnome.Terminal.Legacy.Settings default-show-menubar was true after having installed 3.7.1.
Should be fixed on master.