migration: Correctly get the value of the default profile gconf pref

Need to allow the gconf default, since otherwise we won't migrate the
prefs from the default profile that are now global options.

https://bugzilla.gnome.org/show_bug.cgi?id=692021